Use a common Button component

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ html, body {
 }
 
 @layer components {
-  button {
+  .btn {
     @apply bg-gray-800 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded-md;
   }
 }
