--- a/src/components/global.css
+++ b/src/components/global.css
@@ -1,12 +1,11 @@
-.app div[data-id='tooltip'] {
+.app div[data-id="tooltip"] {
   max-width: 30em;
   margin: 0em;
   padding: 0em;
   font-size: 0.9em;
 }
 
-.app div[data-id='tooltip'] p {
-    margin: 0em;
-    padding: 0.5em 1em;
+.app div[data-id="tooltip"] p {
+  margin: 0em;
+  padding: 0.5em 1em;
 }
-
