--- a/src/index.css
+++ b/src/index.css
@@ -2,26 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-	height: 100%;
-	width: 100%;
-	padding: 0;
-	margin: 0;
-	color: #FAFAFA;
-	font-family: monospace;
-        font-size: 16px;
-	font-weight: 400;
-	background: #040404;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+html,
+body {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  color: #fafafa;
+  font-family: monospace;
+  font-size: 16px;
+  font-weight: 400;
+  background: #040404;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #app {
-	height: 100%;
+  height: 100%;
 }
 
 @layer components {
