--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,16 @@ body {
   height: 100%;
 }
 
+@layer base {
+  h1 {
+    @apply text-2xl pb-4;
+  }
+
+  h2 {
+    @apply text-xl pb-2;
+  }
+}
+
 @layer components {
   .btn {
     @apply bg-gray-800 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded-md;
