--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(./background.jpg);
+  background-size: cover;
+}
+
 html,
 body {
   height: 100%;
@@ -12,7 +18,6 @@ body {
   font-family: monospace;
   font-size: 16px;
   font-weight: 400;
-  background: #040404;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
