--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* TODO: shove this in the repo, don't import it from Google */
+@import url('https://fonts.googleapis.com/css2?family=Cousine:wght@400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
